TestSuite/PascalABCTests/errors/err0434.pas
begin
  var s: set of integer;
  s := s + [2.5];
  Print(s);
end.